# ifj-project-2022

./: .gitignore  CMakeLists.txt  Makefile  README.md  allinone.c  ast.c  ast.h  code_generator.c  code_generator.h  htab.c  htab.h  main  main.c  precedent.c  precedent.h  recursive_descent.c  recursive_descent.h  scanner.c  scanner.h  semantic.c  semantic.h  strings.c  strings.h  structs.c  symtable.c  symtable.h  syntax_tree.c  syntax_tree.h  test.c  tmp.txt  token_stack.c  token_stack.h
.github/workflows/: cmake.yml  make.yaml
documents/: Dokumentace návrhu a implementace.docx  Dokumentace_navrhu_a_implementace.docx  IFJ_GRAMATIKA.txt  rozdeleni
src/: Makefile  scanner.c  strings.c  structs.c  symtable.h
tests/: CMakeLists.txt  strings_test.cpp
